# mini_v2_node

./: .gitignore  .gitmodules  .mxproject  .pylintrc  .sonarcloud.properties  AGENTS.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  can_pwm_v2.ioc  check_res.py  direct_piher_canopen.py  gimbal_autopilot.py  gimbal_autopilot_sim.py  pytest.ini  requirements-cyphal.txt  requirements.txt  run_test_until.sh  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  build_and_deploy.yml  build_cyphal.yml  build_dronecan.yml  ci.yml  code_style.yml  cyphal.yml  cyphal_sitl.yml  deploy.yml  dronecan.yml  dronecan_sitl.yml  sonarcloud.yml  tests.yml
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
Libs/CMSIS-DSP/Include/: arm_math.h
Libs/CMSIS-DSP/Source/: arm_cfft_q15.c  arm_q15_to_float.c
Libs/node-v4-h7-ioc/: .mxproject  CMakeLists.txt  STM32H753IIK6-V4.ioc  STM32H753XX_FLASH.ld
Libs/node-v4-h7-ioc/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
Src/applications/bootloader/: CMakeLists.txt
Src/applications/both/: CMakeLists.txt  README.md  default_params.yaml  default_params.yml
Src/applications/cyphal/: CMakeLists.txt  README.md  default_params.yaml  modules.cpp  modules.hpp
Src/applications/dronecan/: CMakeLists.txt  README.md  default_params.yaml  default_params.yml  modules.cpp
Src/boards/: README.md
Src/common/: FFT.cpp  FFT.hpp  algorithms.cpp  algorithms.hpp  application.cpp  application.hpp  common.cpp  common.hpp  logging.cpp  logging.hpp  mcu_family_id.hpp  module.cpp  module.hpp  oscillation_generator.cpp  oscillation_generator.hpp  params.yaml  ttl.hpp  zip.hpp
Src/cyphal_application/: CMakeLists.txt  README.md  application.cpp  application.hpp  default_params.yaml  default_params.yml  git_software_version.h  modules.cpp  params.cpp  params.hpp  params.yaml  string_params.hpp
Src/cyphal_application/circuit_status/: circuit_status.cpp  circuit_status.hpp  params.yaml
Src/cyphal_application/feedback/: feedback.cpp  feedback.hpp  params.yaml
Src/cyphal_application/modules/: modules.cpp
Src/cyphal_application/setpoint/: params.yaml  setpoint.cpp  setpoint.hpp
Src/drivers/as5600/: CMakeLists.txt  as5600.cpp  as5600.hpp
Src/drivers/as5600/tests/: CMakeLists.txt  main.cpp  test_as5600.cpp
Src/drivers/board_monitor/: board_monitor.cpp  board_monitor.hpp
Src/drivers/ina228/: CMakeLists.txt  ina228.cpp  ina228.hpp
Src/drivers/mpu9250/: CMakeLists.txt  mpu9250.cpp  mpu9250.hpp
Src/drivers/rcpwm/: CMakeLists.txt  rcpwm.cpp  rcpwm.hpp
Src/drivers/sht3x/: CMakeLists.txt  sht3x.cpp  sht3x.hpp
Src/drivers/sht3x/tests/: CMakeLists.txt  test_sht3x.cpp
Src/dronecan_application/: CMakeLists.txt  README.md  algorithms.cpp  algorithms.hpp  application.cpp  application.hpp  default_params.yaml  default_params.yml  git_hash.h  logger.cpp  logger.hpp  logging.h  modules.cpp  params.cpp  params.hpp  params.yaml
Src/dronecan_application/modules/: CircuitStatusModule.cpp  CircuitStatusModule.hpp  PWMModule.cpp  PWMModule.hpp  modules.cpp  modules.hpp
Src/modules/angle_sensor/: CMakeLists.txt  angle_sensor.cpp  angle_sensor.hpp
Src/modules/application/: CMakeLists.txt  app_descriptor.cpp  application.cpp
Src/modules/bootloader/: CMakeLists.txt  application.cpp  application.hpp  bootloader_interface.cpp  main.cpp  main.hpp  my_can_driver.cpp  my_can_driver.hpp  params.yaml
Src/modules/dronecan/canopen/: CMakeLists.txt  canopen.cpp  canopen.hpp
Src/modules/dronecan/core/: CMakeLists.txt  dronecan_module.cpp  logger.cpp
Src/modules/dronecan_module/: dronecan_module.hpp
Src/modules/imu/: CMakeLists.txt  imu.cpp  imu.hpp  params.yaml
Src/modules/pwm/: CMakeLists.txt  main.cpp  main.hpp  params.yaml  router.cpp  (+2 more)
Src/platform/stm32f103/: CMakeLists.txt  README.md  adc.cpp  i2c.cpp  iwdg.cpp  led.cpp  platform_specific.cpp  pwm.cpp  rcpwm_channels.cpp  sht3x.cpp  temperature_sensor.cpp  uart.cpp
Src/platform/stm32f103/cmake/: Toolchain-arm-none-eabi.cmake
Src/platform/stm32g0b1/: CMakeLists.txt  gpio.cpp  pwm.cpp  rfft.hpp  spi.cpp
Src/platform/stm32h753xx/: CMakeLists.txt
Src/platform/ubuntu/: CMakeLists.txt  adc.cpp  gpio.cpp  i2c.cpp  iwdg.cpp  led.cpp  main.h  platform_specific.cpp  pwm.cpp  rfft.hpp  spi.cpp  temperature_sensor.cpp
Src/simple_app_example/: application.cpp  params.hpp
Src/simple_cyphal_application/: application.cpp  params.hpp
Tests/: CMakeLists.txt  Makefile  test.txt  test_issue_0001_pwm_same_channel_apply.py
Tests/common/: test_algorithms.cpp  test_fft.cpp
cmake/: Toolchain-arm-none-eabi.cmake  bootloader_application_postprocess.cmake  create_binary_with_meaningful_name.cmake  full_firmware_info.cmake  git.cmake  libparams_generate_default_params.cmake  module.cmake  params.cmake  stm32f103xB.cmake  stm32g0b1.cmake  stm32g0b1_bootloader.cmake  toolchain-stm32f103xB.cmake  toolchain-stm32g0b1.cmake  toolchain-stm32h753xx.cmake  toolchain-ubuntu.cmake  use_external_github_library.cmake
docs/: CONTRIBUTING.md  both.md  build_system.md  code_style.md  cubemx.md  cyphal.md  documentation_guidelines.md  embedded_firmware_contract.md  framework.md  gimbal.md  hardware.md  icd_dronecan.md  incidents.md  issues.md  led_meaning.md  mode_cyphal.md  mode_dronecan.md  python_test_guide.md  supported_can_backends.md  uc_gripper.md  uc_hygrometer.md  uc_template.md  uc_vibrations.md
docs/both/: README.md
docs/cyphal/: README.md
docs/dronecan/: README.md
mini_v2/: Makefile  STM32F103T8Ux_FLASH.ld
scripts/: build.sh  check_app_descriptor.py  check_before_commit.sh  check_can_speed.py  code_style.sh  create_slcan_from_serial.sh  cubemx.py  deploy_release_to_telegram.py  docker_run.sh  ensure_cubemx_project.sh  flash.sh  generate_cubemx_hal.sh  get_sniffer_symlink.sh  init.sh  install.py  install_bootloader.sh  kocherga_image.py  package_cubemx_archive.sh  pre_commit.sh  prebuild_check.py  prebuild_cyphal.sh  test_cyphal.sh  tests.sh  ubuntu.sh
(+228 files in other folders)
